[package]
name = "grimace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.16.7"
gtk = "0.16.2"
glib = "0.16.9"
gdk = "0.16.2"
mutter = "0.1.1"
rfd = { version = "0.11.4", default-features = false, features = ["xdg-portal"] }
num_cpus = "1.16.0"